# ruvector-edge

./: .gitignore  250-questions-results.md  250-questions-semantic-results.md  CHANGELOG.md  ELEX-011-IMPLEMENTATION-SUMMARY.md  GETTING_STARTED.md  README.md  TESTING_SUMMARY.md  asm-diff.txt  bunfig.toml  debug-key.ts  package-lock.json  package.json  qtable-diff.txt  qtable-domain-vs-layer.txt  qtable-vs-ranqtable.txt  test-sona-router.ts  tsconfig.json  vitest.config.ts
.agent/workflows/: verify-live-demo.md
.agentdb-local/: elex-coordination.json  elex-features.json  elex-intelligence.json  elex-knowledge.json  elex-optimization.json
.claude/: memory.db
.claude-flow/: config.yaml
.claude-flow/agents/: store.json
.claude-flow/metrics/: .ddd-last-run  ddd-progress.json
.claude/memory/: ran-features-150.json
.swarm/: memory.db  q-learning-model.json  schema.sql  state.json
agents/: architect.yaml  coder.yaml  reviewer.yaml  security-architect.yaml  tester.yaml
claude-flow-v3/: CLAUDE.md  README.md
claude-flow-v3/v3/: CLAUDE.md  README.md
data/test-results/: ran-agent-250-battle-report.json  ran-agent-battle-report.json
docs/: PRD copy.md  PRD.md  README.md  architecture.md  asm-implementation-guide.md  decisions-matrix-v2.md  elex-development.md  implementation-roadmap.md  ran-ai-agents-implementation-summary.md  rust-architecture.md  security-integration.md  self-learning-swarm-PRD.md  wasm-agents.md
docs/adr/: ADR-001-swarm-topology.md  ADR-002-consensus-protocol.md  ADR-003-edge-first-architecture.md  ADR-004-agent-specialization.md  ADR-005-vector-memory-hnsw.md  ADR-006-q-learning-engine.md  ADR-007-security-cryptography.md  ADR-008-safe-zone-constraints.md  ADR-009-federated-learning.md  ADR-010-closed-loop-optimization.md  ADR-011-rust-memory-model.md  ADR-012-unsafe-rust-policy.md  ADR-013-wasm-bindgen-strategy.md  ADR-014-simd-implementation.md  ADR-015-error-handling.md  ADR-016-testing-strategy.md  ADR-017-workspace-structure.md  ADR-018-concurrency-model.md  ADR-019-persistence-format.md  ADR-020-trait-design.md  ADR-024-autonomous-state-machine.md  ADR-025-ran-battle-testing-framework.md  ADR-101-neural-agent-architecture.md  ADR-102-swarm-coordination-protocol.md  ADR-103-federated-learning-strategy.md  ADR-104-ruvector-memory-integration.md  ADR-105-wasm-simd-acceleration.md  ADR-106-safe-zone-enforcement.md  ADR-107-domain-driven-design-structure.md  ADR-108-ericsson-feature-ontology.md  ADR-109-claude-flow-v3-deep-integration.md  (+10 more)
examples/: autonomous-qa-usage.ts
scripts/: README.md  batch-query-questions.ts  batch-train-agentdb.ts  deps.py  generate-questions-js.ts  load-elex-features-to-agentdb.ts  load-elex-to-memory.ts  query-agentdb.ts  semantic-react-query.ts  semantic-search.ts  test-250-questions.ts  test-skill-query.ts
src/wasm/: Cargo.toml  EXPERIENCE_GUIDE.md  PHASE7_OPTIMIZATION_GUIDE.md  PHASE7_SUMMARY.md  PHASE8_ARCHITECTURE.md  VALIDATION.md  build-optimized.sh  demo-node.ts  run-benchmarks.sh  serve-browser.sh  test-node.js
src/wasm/.cargo.backup/: config.toml
src/wasm/.claude-flow/: daemon-state.json
src/wasm/agent/: Cargo.toml  build.sh
src/wasm/agent/.github/workflows/: test.yml
src/wasm/agent/benches/: hnsw_bench.rs  q_learning_bench.rs  simd_bench.rs
src/wasm/agent/docs/: TESTING.md  TESTING_SUMMARY.md
src/wasm/agent/src/: agent_registry.rs  crypto.rs  crypto_test.rs  feature_agent.rs  feature_agent_test.rs  lib.rs  q_learning.rs  q_learning_test.rs  security_hardening.rs  simd_ops.rs  simd_ops_test.rs
src/wasm/agent/tests/fixtures/: ericsson_features.rs  mod.rs  q_table_test_vectors.rs  simd_test_vectors.rs
src/wasm/agent/tests/integration/: mod.rs  wasm_integration.rs
src/wasm/agent/tests/property/: mod.rs  q_table_properties.rs  simd_properties.rs
src/wasm/crates/benches/: Cargo.toml  cache_benchmark.rs  hnsw_benchmark.rs  memory_benchmark.rs  qlearning_benchmark.rs  simd_benchmark.rs
src/wasm/crates/elex-agent/: Cargo.toml  QUERY_HANDLER.md
src/wasm/crates/elex-agent/src/: agent.rs  cmedit.rs  lib.rs  query_handler.rs
src/wasm/crates/elex-core/: Cargo.toml
src/wasm/crates/elex-core/src/: error.rs  feature.rs  knowledge.rs  lib.rs  logging.rs  traits.rs  types.rs
src/wasm/crates/elex-crypto/: Cargo.toml  SECURITY.md  SECURITY_AUDIT.md
src/wasm/crates/elex-crypto/src/: encryption.rs  identity.rs  key_exchange.rs  lib.rs  signing.rs
src/wasm/crates/elex-memory/: Cargo.toml
src/wasm/crates/elex-memory/src/: cache.rs  hnsw.rs  lib.rs  storage.rs
src/wasm/crates/elex-qlearning/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
src/wasm/crates/elex-qlearning/src/: batch.rs  encoding.rs  lib.rs  policy.rs  qtable.rs  replay.rs  trajectory.rs
src/wasm/crates/elex-qlearning/tests/: integration_test.rs  test_encoding_policy.rs
src/wasm/crates/elex-routing/: Cargo.toml
src/wasm/crates/elex-routing/docs/: ELEX-024-IMPLEMENTATION.md
src/wasm/crates/elex-routing/src/: federation.rs  gossip.rs  lib.rs  raft.rs  raft_log.rs  raft_state.rs  router.rs
src/wasm/crates/elex-routing/tests/: raft_integration_test.rs
src/wasm/crates/elex-safety/: Cargo.toml  build.rs
src/wasm/crates/elex-safety/constraints/: embedded.rs
src/wasm/crates/elex-safety/src/: lib.rs  safe_zone.rs
src/wasm/crates/elex-simd/: Cargo.toml  ELEX-013-IMPLEMENTATION.md
src/wasm/crates/elex-simd/benches/: simd_benchmark.rs
src/wasm/crates/elex-simd/src/: aggregation.rs  lib.rs  qlearning.rs  similarity.rs  validation.rs
src/wasm/crates/elex-simd/tests/: integration_test.rs  validate_aggregation.rs
src/wasm/crates/elex-wasm/: Cargo.toml  PHASE7_IMPLEMENTATION.md  build.sh  elex-wasm.d.ts  package.json
src/wasm/crates/elex-wasm/src/: lazy.rs  lib.rs  storage.rs  telemetry.rs
src/wasm/crates/elex-wasm/tests/: node_test.js  web_test.rs
src/wasm/demo-browser/: README.md  elex_wasm.d.ts  elex_wasm.js  elex_wasm_bg.wasm.d.ts  index.html  main.js  package.json  questions.js  style.css
src/wasm/hnsw/: Cargo.toml
src/wasm/hnsw/src/: lib.rs
tests/: README.md  goal-006-handover-optimization.test.ts
(+520 files in other folders)
