# ELEX Edge AI Agent Swarm - Cargo Workspace
#
# 593 specialized WASM agents for Ericsson RAN feature optimization
# with SIMD acceleration (3-8x speedup) and edge-first architecture.
#
# Workspace: 8 crates organized by DDD bounded contexts

[workspace]
resolver = "2"
members = [
    "crates/elex-core",
    "crates/elex-simd",
    "crates/elex-qlearning",
    "crates/elex-memory",
    "crates/elex-crypto",
    "crates/elex-routing",
    "crates/elex-safety",
    "crates/elex-agent",
    "crates/elex-wasm",
]

[workspace.package]
version = "3.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/elex/edge-ai-swarm"
authors = ["ELEX Team"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbRequest",
    "Event",
    "IdbCursor",
    "IdbCursorWithValue",
    "DomStringList",
] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
smallvec = "1.11"
hashbrown = "0.14"

# Compression
lzzzz = "1.0"
bincode = "1.3"

# Random number generation (with WASM support)
getrandom = { version = "0.2", features = ["js"] }

# Hex encoding/decoding
hex = "0.4"

# Async (for WASM IndexedDB)
wasm-bindgen-futures = "0.4"

# Cryptography (for coordination, not edge agents)
ed25519-dalek = { version = "2.0", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
aes-gcm = "0.10"

# Development dependencies
console_error_panic_hook = "0.1"

[workspace.metadata.wasm-pack]
wasm-opt = false  # Disabled due to SIMD/bulk-memory feature flags

# Profile configuration for optimized WASM binaries
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.elex-wasm]
opt-level = "z"
codegen-units = 1
