[workspace]
# This package is excluded from the parent workspace

[package]
name = "edge-agent-wasm"
version = "2.1.0"
edition = "2021"
description = "ELEX Edge AI Agent WASM module"
license = "MIT"

# Disable wasm-opt due to SIMD/bulk-memory feature flags
[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
console_error_panic_hook = { version = "0.1", optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
rand_core = "0.6"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.21"

[features]
default = ["console_error_panic_hook"]
simd = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
wasm-bindgen-test = "0.3"
proptest = "1.0"
criterion = "0.5"
quickcheck = "1.0"
rand = "0.8"
