[package]
name = "elex-benches"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
elex-core = { path = "../elex-core" }
elex-simd = { path = "../elex-simd" }
elex-qlearning = { path = "../elex-qlearning" }
elex-memory = { path = "../elex-memory" }
elex-agent = { path = "../elex-agent" }

criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "hnsw_benchmark"
harness = false

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "qlearning_benchmark"
harness = false

[[bench]]
name = "cache_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false
