[package]
name = "elex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ELEX core types and traits for domain modeling"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
