[package]
name = "elex-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ELEX cryptography: Ed25519 identity and AES-256-GCM encryption"

[dependencies]
elex-core = { path = "../elex-core" }
elex-memory = { path = "../elex-memory", default-features = false, features = ["indexeddb"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
getrandom = { workspace = true }
rand_core = "0.6"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
blake3 = "1.5"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
