[package]
name = "elex-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ELEX HNSW vector index and memory management"

[dependencies]
elex-core = { path = "../elex-core" }
elex-simd = { path = "../elex-simd" }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

# LZ4 compression - only available on non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lzzzz = { workspace = true, optional = true }

[features]
default = ["lz4", "indexeddb"]
lz4 = ["lzzzz"]
indexeddb = ["wasm-bindgen-futures", "wasm-bindgen", "js-sys", "web-sys"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

# [[bench]]
# name = "hnsw_benchmark"
# harness = false
